# python-client-library

./: .gitignore  0527_1653_xz_scan.mat.REMOVED.git-id  0527_1653_xz_scan.yaml  README.md  my_cool_experiment.mat  my_cool_experiment.yaml  pyproject.toml  trial.ipynb
src/data_ingestion/: __init__.py  ingestion.py
src/data_ingestion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
